--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                                             <a class="nav-link" href="500.html">500 Page</a>
                                         </nav>
                                     </div>
+                                    <!-- Add Hashtag Manager here -->
+                                            <a class="nav-link" href="hashtag-manager.html">
+                                         <div class="sb-nav-link-icon"><i class="fas fa-hashtag"></i></div>
+                                           Hashtag Manager
+                                        </a>
                                 </nav>
                             </div>
                             <div class="sb-sidenav-menu-heading">Addons</div>
